fixed: when importing zipfile, without filedate. improved: "Send to analysis" button will show file list table in analysis.html

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -210,19 +210,26 @@
 					<thead>
 					<tr>
 						<th data-visible="true"  data-checkbox="true" data-field="sel">S</th>
-						<th data-sortable="true" data-visible="true"  data-field="MD5_KEY">MD5</th>
-						<th data-sortable="true" data-visible="false" data-field="FILE_NAME">File Name</th>
-						<th data-sortable="true" data-visible="false" data-field="RESULT_NUMBER">Result</th>
-						<th data-sortable="true" data-visible="true"  data-field="VIRUS_NAME">Virus Name</th>
-						<th data-sortable="true" data-visible="false" data-field="SIGN_CREDIT" data-align="right">Sign Credit</th>
-						<th data-sortable="true" data-visible="true"  data-field="REPORT_PC_COUNT" data-align="right">PC Count</th>
-						<th data-sortable="true" data-visible="false" data-field="SAVED_SIZE" data-align="right">File Size</th>
-						<th data-sortable="true" data-visible="false" data-field="FILE_TAG">File Tag</th>
+						<th data-sortable="true" data-visible="true"  data-field="MD5_Key">MD5</th>
+						<th data-sortable="true" data-visible="false" data-field="File_Name">File Name</th>
+						<th data-sortable="true" data-visible="false" data-field="Result_Number">Result</th>
+						<th data-sortable="true" data-visible="true"  data-field="Virus_Name">Virus Name</th>
+						<th data-sortable="true" data-visible="false" data-field="Sign_Credit" data-align="right">Sign Credit</th>
+						<th data-sortable="true" data-visible="true"  data-field="REPORT_PC_Count" data-align="right">PC Count</th>
+						<th data-sortable="true" data-visible="false" data-field="Saved_Size" data-align="right">File Size</th>
+						<th data-sortable="true" data-visible="false" data-field="File_Tag">File Tag</th>
 						<th data-sortable="true" data-visible="true"  data-field="CTIME" data-align="center">Collection Time</th>
 					</tr>
 					</thead>
 				</table>
 			</div>
+			<div class="row">
+			<form id="md5listForm" action="">
+			{% if md5list %}
+			<!-- // append to hidden form. for later use in app.js renderFilelistTable(md5list, "/list/or/"); -->
+				<input type='hidden' id='md5liststr' name='md5liststr' value="{{md5list}}">
+			{% endif %}
+			</form>
 		</div>
 </body>
 
@@ -312,9 +319,9 @@ $(document).ready(function(){
 	{% endif %}
 
 	{% if md5list %}
-	var md5list="{{md5list}}".split(";");
+	var md5list=$('#md5liststr').val().split(";");
 	for (var i in md5list) {
-		$('#text-search').val("md5="+md5list[i]);
+		$('#text-search').val("md5sum="+md5list[i]);
 		$('#btn-search').click();
 	}
 	// reset searchbox.
