fixed data-field to capital letters, since serverside sql returns columns with all capital letters. fixed comment in javascript, invalid comment string for javascript, using ( // instead of # )

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -210,14 +210,14 @@
 					<thead>
 					<tr>
 						<th data-visible="true"  data-checkbox="true" data-field="sel">S</th>
-						<th data-sortable="true" data-visible="true"  data-field="MD5_Key">MD5</th>
-						<th data-sortable="true" data-visible="false" data-field="File_Name">File Name</th>
-						<th data-sortable="true" data-visible="false" data-field="Result_Number">Result</th>
-						<th data-sortable="true" data-visible="true"  data-field="Virus_Name">Virus Name</th>
-						<th data-sortable="true" data-visible="false" data-field="Sign_Credit" data-align="right">Sign Credit</th>
-						<th data-sortable="true" data-visible="true"  data-field="REPORT_PC_Count" data-align="right">PC Count</th>
-						<th data-sortable="true" data-visible="false" data-field="Saved_Size" data-align="right">File Size</th>
-						<th data-sortable="true" data-visible="false" data-field="File_Tag">File Tag</th>
+						<th data-sortable="true" data-visible="true"  data-field="MD5_KEY">MD5</th>
+						<th data-sortable="true" data-visible="false" data-field="FILE_NAME">File Name</th>
+						<th data-sortable="true" data-visible="false" data-field="RESULT_NUMBER">Result</th>
+						<th data-sortable="true" data-visible="true"  data-field="VIRUS_NAME">Virus Name</th>
+						<th data-sortable="true" data-visible="false" data-field="SIGN_CREDIT" data-align="right">Sign Credit</th>
+						<th data-sortable="true" data-visible="true"  data-field="REPORT_PC_COUNT" data-align="right">PC Count</th>
+						<th data-sortable="true" data-visible="false" data-field="SAVED_SIZE" data-align="right">File Size</th>
+						<th data-sortable="true" data-visible="false" data-field="FILE_TAG">File Tag</th>
 						<th data-sortable="true" data-visible="true"  data-field="CTIME" data-align="center">Collection Time</th>
 					</tr>
 					</thead>
