--- a/templates/layout.html
+++ b/templates/layout.html
@@ -165,7 +165,7 @@
 					{%- if request.path.startswith("/analysis/") %}
 					<div class="form-group" style="display:inline;">
 						<div class="input-group" style="display:table;">
-							<input class="form-control" name="search" placeholder="Search Here" autocomplete="off" autofocus="autofocus" type="text" id="text-search" value="{'md5sum':'127dc9979670864c6869a0893698ee1a'}">
+							<input class="form-control" name="search" placeholder="Search Here" autocomplete="off" autofocus="autofocus" type="text" id="text-search" value="md5sum=127dc9979670864c6869a0893698ee1a">
 							<span class="btn input-group-addon" style="width:1%; margin: 0 20px 0 20px;" id="btn-search"><span class="glyphicon glyphicon-search"></span></span>
 							<!-- <button class="btn btn-primary" id="btn-search">Search</button>
 							<div class="input-group-btn" style="width:1%;">
